<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardMotor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    app:cardCornerRadius="5dp">

    <com.guanaj.easyswipemenulibrary.EasySwipeMenuLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentView="@+id/content"
        app:rightMenuView="@+id/right">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivGambar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="TODO"
                    android:scaleType="centerCrop"></ImageView>

                <TextView
                    android:id="@+id/txtNpm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="Merk"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvMerk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        style="@style/TextAppearance.MaterialComponents.Headline6"/>
                </LinearLayout>
                <!--Tahun-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="Tahun"
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvTahun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:textSize="15dp"/>
                </LinearLayout>

                <!--Plat-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="Plat"
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvPlat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:textSize="15dp"/>
                </LinearLayout>
                <!--Warna-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="60dp"
                        android:layout_height="20dp"
                        android:text="Warna"
                        android:textSize="14dp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tvWarna"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:textSize="15dp"/>
                </LinearLayout>

                <!--Harga-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="Harga"
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvHarga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:textSize="15dp"/>
                </LinearLayout>

                <!--Status-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="60dp"
                        android:layout_height="20dp"
                        android:text="Status"
                        android:textSize="14dp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tvStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:textSize="15dp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ivEdit"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:background="#304FFE"
                android:drawableTop="@drawable/ic_baseline_edit_24"
                android:drawableTint="#FFFFFF"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="Edit"
                android:textColor="#FFFFFF"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/ivHapus"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:background="@android:color/holo_red_dark"
                android:drawableTop="@drawable/ic_baseline_delete_forever_24"
                android:drawableTint="#FFFFFF"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="Hapus"
                android:textColor="#FFFFFF"
                android:textSize="11sp" />
        </LinearLayout>
    </com.guanaj.easyswipemenulibrary.EasySwipeMenuLayout>

</com.google.android.material.card.MaterialCardView>