<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/motor"
            android:icon="@drawable/ic_baseline_pedal_bike_24"
            android:iconTint="#0091EA"
            android:title="Motor"
            app:showAsAction="never"></item>

        <item
            android:id="@+id/user"
            android:icon="@drawable/ic_baseline_person_24"
            android:iconTint="#0091EA"
            android:title="User"
            app:showAsAction="never"></item>

        <item
            android:id="@+id/riwayatTransaksi"
            android:icon="@drawable/ic_baseline_history_24"
            android:iconTint="#0091EA"
            android:title="Riwayat Transaksi"
            app:showAsAction="never"></item>

        <item
            android:id="@+id/keluar"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:iconTint="#0091EA"
            android:title="Keluar"
            app:showAsAction="never"></item>
    </group>
</menu>